# pyright-api

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json  run.py
.github/workflows/: build_and_push.yml
pyright-api/: app.py  shell_reader.py
pyright-api/types_/: __init__.py
