[tool.poetry]
name = "Pyright-API"
version = "0.0.1"
description = "A small RESTful API to run Pyright."
authors = ["Alex Nørgaard <umbra@abstractumbra.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "*"
uvloop = "*"
uvicorn = "*"
orjson = "*"

[tool.ruff]
target-version = "py312"
line-length = 125

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "PLR2004",
    "RUF001",
    "RUF009",
    "SIM105",
    "S101",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.12"
